# Coral

./: .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  release.toml
crates/coral-cli/: Cargo.toml
crates/coral-cli/src/: lib.rs  main.rs
crates/coral-cli/src/commands/: bootstrap.rs  chaos.rs  ci.rs  consolidate.rs  context_build.rs  contract.rs  diff.rs  doctor.rs  down.rs  env.rs  env_resolve.rs  export.rs  export_agents.rs  export_skill.rs  feedback.rs  filters.rs  guarantee.rs  history.rs  ingest.rs  init.rs  interface.rs  lint.rs  mcp.rs  migrate.rs  mod.rs  mutants.rs  notion_push.rs  onboard.rs  pins.rs  plan.rs  prompt_loader.rs  prompts.rs  query.rs  runner_helper.rs  scaffold.rs  search.rs  self_check.rs  self_register_marketplace.rs  self_uninstall.rs  self_upgrade.rs  (+14 more)
crates/coral-cli/tests/: bc_regression.rs  cli_smoke.rs  cross_process_lock.rs  doctor_e2e.rs  e2e_full_lifecycle.rs  e2e_multi_repo.rs  e2e_query_cycle.rs  env_devcontainer_emit_e2e.rs  full_lifecycle_v019.rs  mcp_card_smoke.rs  mcp_http_smoke.rs  monitor_e2e.rs  multi_repo_interface_change.rs  multi_repo_project.rs  naming_collision.rs  ollama_bootstrap.rs  quick_output_size.rs  release_flow.rs  session_e2e.rs  skill_build.rs  snapshot_cli.rs  stress_large_wiki.rs  template_validation.rs  test_emit_k6.rs  ui_api_smoke.rs  watch_macos_banner.rs  watch_smoke.rs
crates/coral-cli/tests/snapshots/: snapshot_cli__diff_order_outbox.snap  snapshot_cli__export_html_head_4_page_seed.snap  snapshot_cli__export_json_4_page_seed.snap  snapshot_cli__export_markdown_bundle_4_page_seed.snap  snapshot_cli__history_outbox_4_page_seed.snap  snapshot_cli__lint_fix_dry_run_4_page_seed.snap  snapshot_cli__lint_json_4_page_seed.snap  snapshot_cli__lint_rule_source_not_found_4_page_seed.snap  snapshot_cli__lint_rule_two_codes_or_semantics_4_page_seed.snap  snapshot_cli__lint_severity_critical_json_4_page_seed.snap  snapshot_cli__lint_structural_4_page_seed.snap  snapshot_cli__prompts_list_against_embedded_bundle.snap  snapshot_cli__search_outbox_dispatcher_bm25.snap  snapshot_cli__search_outbox_dispatcher_tfidf.snap  snapshot_cli__stats_default_4_page_seed.snap  snapshot_cli__stats_json_4_page_seed.snap  snapshot_cli__status_4_page_seed.snap  snapshot_cli__validate_pin_no_pins_file.snap
crates/coral-core/: Cargo.toml
crates/coral-core/benches/: allocator.rs  frontmatter_bench.rs  search_bench.rs  walk_bench.rs  wikilinks_bench.rs
crates/coral-core/src/: atomic.rs  auth.rs  cache.rs  config.rs  cost.rs  embeddings.rs  embeddings_sqlite.rs  error.rs  eval.rs  frontmatter.rs  gc.rs  git_remote.rs  gitdiff.rs  governance.rs  index.rs  late_chunking.rs  lib.rs  llms_txt.rs  log.rs  narrative.rs  observability.rs  page.rs  path.rs  pgvector.rs  reranker.rs  search.rs  search_index.rs  slug.rs  storage.rs  symbols.rs  tantivy_backend.rs  vocab.rs  walk.rs  wikilinks.rs
crates/coral-core/src/project/: lock.rs  manifest.rs  mod.rs
crates/coral-core/tests/: concurrency.rs  embeddings_backends_parity.rs  proptest_embeddings_index.rs  proptest_frontmatter.rs  proptest_index.rs  proptest_log.proptest-regressions  proptest_log.rs  proptest_page.rs  proptest_search.rs  proptest_wikilinks.rs  readme_examples_parse.rs
crates/coral-env/: Cargo.toml
crates/coral-env/src/: compose.rs  compose_yaml.rs  devcontainer.rs  error.rs  healthcheck.rs  import.rs  lib.rs  mock.rs  plan.rs  spec.rs
crates/coral-env/tests/: readme_environment_e2e.rs  watch_yaml_render.rs
crates/coral-lint/: Cargo.toml
crates/coral-lint/benches/: structural_bench.rs
crates/coral-lint/examples/: dump_schema.rs
crates/coral-lint/src/: lib.rs  report.rs  semantic.rs  structural.rs
crates/coral-lint/tests/: proptest_lint.rs
crates/coral-mcp/: Cargo.toml
crates/coral-mcp/src/: card.rs  lib.rs  prompts.rs  resources.rs  server.rs  state.rs  tools.rs  watcher.rs
crates/coral-mcp/src/transport/: http_sse.rs  mod.rs  stdio.rs
crates/coral-mcp/tests/: mcp_http_sse_e2e.rs  mcp_pagination_e2e.rs  mcp_resources_e2e.rs  mcp_stdio_golden.rs  mcp_unreviewed_e2e.rs
crates/coral-runner/: Cargo.toml
crates/coral-runner/src/: body_tempfile.rs  embeddings.rs  gemini.rs  http.rs  lib.rs  local.rs  mock.rs  multi_step.rs  prompt.rs  runner.rs
crates/coral-runner/tests/: cross_runner_contract.rs  streaming_failure_modes.rs  wiremock_http.rs
crates/coral-runner/tests/common/: mod.rs
crates/coral-session/: Cargo.toml
crates/coral-session/src/: capture.rs  claude_code.rs  distill.rs  distill_patch.rs  error.rs  forget.rs  lib.rs  list.rs  scrub.rs
crates/coral-session/tests/: distill_patch_e2e.rs  secrets_fixture.rs
crates/coral-session/tests/fixtures/: claude_code_with_secrets.jsonl
crates/coral-stats/: Cargo.toml
crates/coral-stats/examples/: print_schema.rs
crates/coral-stats/src/: lib.rs
crates/coral-test/: Cargo.toml
crates/coral-test/src/: browser_runner.rs  contract_check.rs  contract_runner.rs  coverage.rs  discover.rs  emit_k6.rs  error.rs  event_runner.rs  healthcheck_runner.rs  history.rs  hurl_runner.rs  lib.rs  mock.rs  orchestrator.rs  perf.rs  probe.rs  property_runner.rs  recorded_runner.rs  report.rs  semantic_diff.rs  spec.rs  trace_runner.rs  user_defined_runner.rs  walk_tests.rs
crates/coral-test/tests/: emit_k6_smoke.rs  openapi_adversarial.rs  recorded.rs
crates/coral-ui/: Cargo.toml  build.rs
crates/coral-ui/assets/src/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
crates/coral-ui/src/: auth.rs  error.rs  lib.rs  server.rs  state.rs  static_assets.rs
crates/coral-ui/src/routes/: affected.rs  contracts.rs  events.rs  graph.rs  guarantee.rs  health.rs  interfaces.rs  manifest.rs  mod.rs  pages.rs  query.rs  search.rs  tools.rs
examples/orchestra-ingest/: .coral-pins.toml  Cargo.toml  README.md
examples/orchestra-ingest/.github/workflows/: wiki-maintenance.yml
examples/orchestra-ingest/.wiki/: SCHEMA.md  index.md  log.md
examples/orchestra-ingest/src/: main.rs
(+254 files in other folders)
