[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.23.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Agustín Bajo <agustinbajo@gmail.com>"]
repository = "https://github.com/agustincbajo/Coral"
description = "Karpathy-style LLM Wiki maintainer for Git repos"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
regex = "1"
walkdir = "2"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
ahash = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
include_dir = "0.7"
toml = "0.8"
tempfile = "3"
assert_fs = "1"
fs4 = "0.13"
predicates = "3"
assert_cmd = "2"
schemars = { version = "0.8", features = ["chrono"] }
# v0.21.1: HTTP/SSE MCP transport (Streamable HTTP per MCP 2025-11-25).
# Picked tiny-http over hyper/axum because the MCP HTTP transport is a
# small, blocking-I/O surface — POST /mcp + GET /mcp + DELETE /mcp —
# and tiny-http is single-purpose, dep-light, and has no async runtime
# dragging the rest of the workspace into tokio. This is the only new
# dep in v0.21.1 (justified in the orchestrator's spec §4).
tiny_http = "0.12"
# v0.22.6: `coral skill build` produces an Anthropic-Skills-compatible
# zip bundle from `template/`. We need a deterministic deflate-zip
# writer; the std library doesn't ship one and writing a minimal
# zip header by hand (LFH + central directory + EOCD) is
# error-prone. `zip` 2.x (~50 KB) is single-purpose and pure-rust
# with `default-features = false, features = ["deflate"]` (drops
# bzip2/xz/zstd system-lib transitives — we don't use those
# methods). Justified per orchestrator's spec §D3.
zip = { version = "2", default-features = false, features = ["deflate"] }
# v0.23.1: `coral monitor up` is a long-lived foreground loop that
# must exit cleanly on SIGINT/SIGTERM with a final summary printed
# and the JSONL file's last line synced to disk. Hand-rolling
# `unsafe { libc::signal(...) }` works but signal-hook-registry's
# AtomicBool sentinel pattern is the well-trodden, easier-to-reason-
# about path. ~30 KB single-purpose dep with `libc` as the only
# transitive — both already in the tree via tracing/clap.
signal-hook = "0.3"
# v0.23.3: `coral test --kind property-based` runs Schemathesis-style
# property tests over OpenAPI specs. proptest gives us hand-rolled
# `BoxedStrategy<Value = serde_json::Value>` for the 5 JSON-Schema
# types we generate (string/number/integer/object/array), plus
# automatic shrinking on failure. **Already in the dev-dep tree of
# `coral-core` and `coral-lint`** — promoting to a workspace dep just
# centralizes the version pin. No new transitives — everything in
# proptest 1.x's tree (`bit-set`, `bit-vec`, `bitflags`, `num-traits`,
# `quick-error`, `rand`, `rand_chacha`, `regex`, `regex-syntax`,
# `unarray`) was already pulled in by criterion / regex / rand /
# proptest itself when the dev-deps compiled. Justified per
# orchestrator's spec working-agreement #2.
proptest = "1"
# v0.24.0: global allocator for the CLI binary. mimalloc replaces the
# system allocator for 10-20% throughput on allocation-heavy workloads
# (TF-IDF scoring, wiki parsing, large OpenAPI property-test generation).
# Single-purpose, ~40 KB, pure-C with a thin Rust wrapper; no new Rust
# transitives beyond the `libmimalloc-sys` build-script.
mimalloc = { version = "0.1", default-features = false }
coral-core = { path = "crates/coral-core", version = "0.23.3" }
coral-env = { path = "crates/coral-env", version = "0.23.3" }
coral-lint = { path = "crates/coral-lint", version = "0.23.3" }
coral-runner = { path = "crates/coral-runner", version = "0.23.3" }
coral-session = { path = "crates/coral-session", version = "0.23.3" }
coral-stats = { path = "crates/coral-stats", version = "0.23.3" }
coral-test = { path = "crates/coral-test", version = "0.23.3" }
coral-mcp = { path = "crates/coral-mcp", version = "0.23.3" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
