[package]
name = "coral-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coral CLI — LLM Wiki maintainer."

[lib]
name = "coral_cli"
path = "src/lib.rs"

[[bin]]
name = "coral"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
include_dir = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
zip = { workspace = true }
coral-core = { workspace = true }
coral-env = { workspace = true }
coral-lint = { workspace = true }
coral-mcp = { workspace = true }
coral-runner = { workspace = true }
coral-session = { workspace = true }
coral-stats = { workspace = true }
coral-test = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { version = "1", features = ["yaml", "filters"] }
zip = { workspace = true }
