[package]
name = "coral-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coral core types: frontmatter, wikilinks, pages, index, log."

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
