[package]
name = "coral-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coral core types: frontmatter, wikilinks, pages, index, log."

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
fs4 = { workspace = true, features = ["sync"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5"
proptest = { workspace = true }

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "wikilinks_bench"
harness = false

[[bench]]
name = "frontmatter_bench"
harness = false

[[bench]]
name = "walk_bench"
harness = false
