[package]
name = "coral-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coral lint: structural + semantic wiki checks."

[dependencies]
coral-core = { path = "../coral-core" }
coral-runner = { path = "../coral-runner" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_yaml_ng = { workspace = true }
criterion = "0.5"
proptest = "1"

[[bench]]
name = "structural_bench"
harness = false
