[package]
name = "coral-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coral lint: structural + semantic wiki checks."

[dependencies]
coral-core = { workspace = true }
coral-runner = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# v0.20.0: `check_unreviewed_distilled` reads `Frontmatter::extra`
# entries which deserialize into `serde_yaml_ng::Value`. Lifted from
# dev-deps to a regular dep so the check can pattern-match on Bool
# / String variants of the YAML value tree.
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_yaml_ng = { workspace = true }
criterion = "0.5"
proptest = "1"

[[bench]]
name = "structural_bench"
harness = false
